--- a/1강/02 기본구조.md
+++ b/1강/02 기본구조.md
@@ -1,3 +1,5 @@
+# HTML 구조
+
 ```html
 
 <!DOCTYPE html>
@@ -12,3 +14,20 @@
 </html>
 
 ```
+
+`<!DOCTYPE HTML>` : HTML5를 사용함을 브라우저에 선언하는 역할을 합니다.
+
+`<html>` : 전체 html 문서를 감싸는 태그입니다. 하나만 존재해야 하고 html 바깥에 DOCTYPE을 제외한 다른 태그가 있으면 안 됩니다.
+
+`<head>` :html 문서에 대한 정보를 나타내는 부분입니다. 하나만 존재해야하고, html 바로 아래에 있어야합니다.
+
+`<title>` : head 안에 들어가는 태그로 제목표시줄의 내용을 나타냅니다. 위의 예시를 보면 제목표시줄의 내용은 HTML 기본구조 입니다.
+
+`<meta>` : meta 역시 head 안에 들어가는 태그로 문서에 대한 설명을 표시합니다. 사람에게는 보이지 않고 브라우저만 읽을 수 있습니다. 속성으로 charset="utf-8"이라고 한 것은 브라우저에게 한글 인코딩을 UTF-8로 설정하라고 지시합니다. 이 부분이 있어야 한글이 깨지지 않습니다.
+
+`<body>` : html 문서에서 실제적으로 화면에 보여지는 부분을 나타냅니다. 하나만 존재해야 하고, html 바로 아래, head 다음에 위치해야 합니다.
+
+
+### 결론 
+빨간색 박스처럼 head 태그 안에는 문서에 대한 정보 또는 제목 표시를 하고, 파란박스 처럼 body 태그 안에 있는 내용부터 실질적으로 화면에 보여지는 부분이다.
+
