--- a/1강/02 기본구조.md
+++ b/1강/02 기본구조.md
@@ -27,7 +27,10 @@
 
 `<body>` : html 문서에서 실제적으로 화면에 보여지는 부분을 나타냅니다. 하나만 존재해야 하고, html 바로 아래, head 다음에 위치해야 합니다.
 
+### 결과
+![스크린샷 2022-06-08 오후 1 42 25](https://user-images.githubusercontent.com/48852104/172533286-e7661bda-8da2-4c69-bd95-913298b96d22.png)
+
 
 ### 결론 
-빨간색 박스처럼 head 태그 안에는 문서에 대한 정보 또는 제목 표시를 하고, 파란박스 처럼 body 태그 안에 있는 내용부터 실질적으로 화면에 보여지는 부분이다.
+head 태그 안에는 문서에 대한 정보 또는 제목 표시를 하고, body 태그 안에 있는 내용부터 실질적으로 화면에 보여지는 부분이다.
 
