--- a/1강/02 기본구조.md
+++ b/1강/02 기본구조.md
@@ -1,3 +1,34 @@
+# 메모장을 이용한 첫 웹페이지
+
+```html
+<!DOCTYPE html>  
+<html>  
+<body>
+
+  나의 첫 웹페이지
+
+</body>  
+</html>
+```
+바탕화면에 실습 폴더를 만든 후, 위의 HTML코드를 메모장에 작성합니다.
+
+파일명을 first.html 로 하고 파일 형식은 모든파일, 인코딩은 'UTF-8'을 선택합니다.     
+
+![스크린샷 2022-06-08 오후 3 50 57](https://user-images.githubusercontent.com/48852104/172550901-bf8a9f10-8350-47e7-a3bb-50133c743e5b.png)
+
+실습 폴더에 밑의 그림처럼 html확장자로 파일이 저장된것을 볼 수 있습니다.       
+해당 파일을 더블 클릭을 하거나 오른쪽 마우스 클릭후 열기를 누르면 웹이 열립니다.      
+여러분이 만든 첫번째 웹 페이지가 되었습니다.     
+
+### 소스보기
+해당 브라우저에서 자신의 HTML 코드를 보거나 자신의 코드가 잘 적용이 되었는지 확인을 해보아야 하겠지요? 
+먼저 오른쪽 마우스를 클릭 후 페이지 소스보기나 검사를 누르면 됩니다.     
+물론 웹사이트들에서도 확인할 수 있습니다.     
+
+![스크린샷 2022-06-08 오후 3 52 47](https://user-images.githubusercontent.com/48852104/172551230-3fe181ef-1a1a-4060-a2dc-7142b04937ae.png)
+
+
+
 # HTML 구조
 
 ```html
