Update 05 웹 정리 .md

--- a/1강/05 웹 정리 .md
+++ b/1강/05 웹 정리 .md
@@ -1,1 +1,9 @@
 
+![스크린샷 2023-01-28 오후 1 14 26](https://user-images.githubusercontent.com/48852104/215241496-f3c4c4aa-46f8-46f0-873e-2a65470754ed.png)
+
+![스크린샷 2023-01-28 오후 1 14 58](https://user-images.githubusercontent.com/48852104/215241509-b023bf92-533d-4e32-8125-79974dab46af.png)
+
+
+![스크린샷 2023-01-28 오후 1 13 39](https://user-images.githubusercontent.com/48852104/215241474-339b78a2-2054-44b8-bdea-ac9fdfc478e6.png)
+
+
