Update 05 웹 정리 .md

--- a/1강/05 웹 정리 .md
+++ b/1강/05 웹 정리 .md
@@ -1,9 +1,69 @@
+### 프로그래밍 언어 동작 방식
+
+사람이 원하는걸 컴퓨터에게 시키고 싶습니다.
+
+하지만 컴퓨터는 사람의 언어를 알아들을 수 없지요.    
+
 
 ![스크린샷 2023-01-28 오후 1 14 26](https://user-images.githubusercontent.com/48852104/215241496-f3c4c4aa-46f8-46f0-873e-2a65470754ed.png)
 
+
+우리는 컴퓨터가 알아볼 수 있는 0과 1로 이루어진 bit라는 방식으로 전달해주어야 합니다.    
+그런데 그러려면 우리가 알아볼수가 없겠죠?    
+번역기를 하나 두고 번역기가 알아볼 수 있는 언어로 작성하고,    
+번역기가 0과 1로 번역하면 우리가 편하게 컴퓨터에게 일을 시킬 수 있게 됩니다.     
+     
+     
 ![스크린샷 2023-01-28 오후 1 14 58](https://user-images.githubusercontent.com/48852104/215241509-b023bf92-533d-4e32-8125-79974dab46af.png)
 
 
+각각의 번역기가 있는 프로그래밍 언어는 다양합니다.     
+
+![스크린샷 2023-01-28 오후 1 41 22](https://user-images.githubusercontent.com/48852104/215242365-09c8b460-f714-4b56-b580-a1ffb1647fad.png)
+![스크린샷 2023-01-28 오후 1 41 54](https://user-images.githubusercontent.com/48852104/215242385-4b120830-99a9-411d-9522-aec87e681bc5.png)
+
+
+보통 많은 프로그램들은 이렇게 만들어집니다.      
+
 ![스크린샷 2023-01-28 오후 1 13 39](https://user-images.githubusercontent.com/48852104/215241474-339b78a2-2054-44b8-bdea-ac9fdfc478e6.png)
+
+
+스마트폰 말고도 다양한 제품들에도 프로그램들이 들어가 있습니다.       
+
+![스크린샷 2023-01-28 오후 1 55 21](https://user-images.githubusercontent.com/48852104/215242830-e0f85cc5-3634-4afd-b543-764058ccde94.png)
+
+
+
+
+### 컴퓨터는 어떻게 연결이 되어 있을까?     
+
+컴퓨터는 인터넷과 연결되어야 비로소 그 역할을 100% 해낼 수 있습니다.     
+인터넷과 연결되지 않은 컴퓨터는 할 수 있는 일이 지극히 제한되겠죠?       
+
+컴퓨터가 연결된 작은 지역은 LAN(Local Area Network) 라고 표현합니다.    
+'로컬(Local)'은 작은 지역으로 학교 컴퓨터실 하나, 아파트 하나, 커피숍 하나하나가 모두 LAN 입니다.     
+LAN을 연결하는 선을 LAN선이라고 부릅니다.       
+지금 사용하는 컴퓨터에도 모두 연결이 되어있습니다.   
+
+
+![스크린샷 2023-01-28 오후 1 43 34](https://user-images.githubusercontent.com/48852104/215242433-4e295274-095d-42ad-a602-3c07607b2157.png)
+![스크린샷 2023-01-28 오후 1 44 01](https://user-images.githubusercontent.com/48852104/215242449-66b1eef1-24b7-45fe-85cf-15ca158d20cf.png)
+![스크린샷 2023-01-28 오후 1 44 13](https://user-images.githubusercontent.com/48852104/215242457-50137f3d-3a6a-474e-bb09-ffa6c73c1dba.png)
+
+이런 여러 LAN을 하나로 연결해 MAN(Metropolitan Area Network)을 만들었습니다.    
+그리고 도시와 도시, 나라와 나라를 모두 연결해서 WAN(Wide Area Network)을 만들게 되죠.     
+국내외의 인터넷 자료를 찾을수 있거나 로블록스 등에서 해외 게이머들을 만날수 있는 것도 다 LAN이 하나로 이어져 있기 때문입니다.    
+
+![스크린샷 2023-01-28 오후 1 50 18](https://user-images.githubusercontent.com/48852104/215242647-0ba0a64d-c23b-4679-92ab-45b377afedba.png)
+
+어? 핸드폰은 LAN 연결이 되어있지 않다고요?      
+
+우리 눈에는 보이지 않지만 이 신호를 무선으로 만드는 기술이 생겨났습니다.      
+그래서 LAN을 직접 연결하지 않더라도 인터넷에 접속할 수 있게 되었지요.    
+핸드폰에게 인터넷 데이터를 주고 그 중간 과정을 해주는 와이파이 라는 기술도 생겨났고요.      
+그 속도는 점점 빨라지고 있고, 3G, 4G, 5G 라는 말도 나오게 되었습니다.      
+
+
+
 
 
