Update 05 웹 정리 .md

--- a/1강/05 웹 정리 .md
+++ b/1강/05 웹 정리 .md
@@ -66,4 +66,43 @@ LAN을 연결하는 선을 LAN선이라고 부릅니다.
 
 
 
+### 웹에서 일어나는 일
+인터넷이라고 하면 어떤게 떠오르나요??      
+
+아마도 네이머나 구글같은 웹사이트들을 떠올릴 수 있을겁니다.       
+인터넷과 같은 의미로 많이 사용되고 있지만, 정확히 말해 웹은 인터넷상의 인기 있는 하나의 서비스일 뿐입니다.       
+월드 와이드 웹(World Wide Web)이란 인터넷에 연결된 사용자들이 서로의 정보를 공유할 수 있는 공간을 의미합니다.        
+
+
+![스크린샷 2022-06-08 오후 1 26 46](https://user-images.githubusercontent.com/48852104/172531552-8e8a6d3b-6306-46a4-a3cb-c1bd0e8ece55.png)
+
+
+웹에는 수많은 웹사이트들이 있고 각각의 웹사이트는 웹 페이지라는 것으로 이루어져 있습니다.       
+웹 페이지에는 글, 그림, 동영상 등 수많은 정보를 담고 있고, 마우스로 클릭하면 해당 웹 페이지로 이동하는 링크들이 있습니다.                 
+이러한 링크들을 통해 각각의 웹 페이지들이 서로 연결되어 있어요.         
+
+웹에 접속할때 어떠한 일이 발생할까요?       
+
+![스크린샷 2023-01-28 오후 2 03 41](https://user-images.githubusercontent.com/48852104/215243116-cee756bd-3ffd-41fb-b4ef-b6c0d37b527f.png)
+
+우리의 스마트폰은 하나하나가 각각의 컴퓨터입니다.      
+만약 스마트폰으로 네이버에 접속하게 된다면 핸드폰 안에 있는 컴퓨터는 네이버가 켜놓은 컴퓨터에게 '웹페이지를 열 파일을 주세요'라는 신호를 보냅니다.     
+네이버의 컴퓨터는 그 신호를 받아서 우리들에게 파일을 전해줍니다.     
+
+수많은 요청들이 네이버의 컴퓨터로 가고 있지요.     
+그래서 네이버의 컴퓨터는 많은 요청을 언제나 받을 수 있게끔 지구 위 어딘가에 365일 24시간, 단 1초도 꺼지지 않는 컴퓨터를 항상 켜놓고 있습니다.     
+
+> 엄청나게 많은 요청에 모두 응답해주기 위해서 네이버는 컴퓨터 1대가 아니라 여러대를 연결해 놓았습니다.   
+> 만약 이 컴퓨터가 모두 꺼진다면 우리는 네이버에 접속 할수 없게 됩니다.    
+> 카카오톡 컴퓨터도, 구글 컴퓨터도 마찬가지죠.
+
+
+![스크린샷 2023-01-28 오후 2 07 53](https://user-images.githubusercontent.com/48852104/215243242-b5fdf526-fa6c-46a1-9d3b-e156146e0eae.png)
+
+이제 
+이제 여기서 
+이제 여기서 등장하는 
+이제 여기서 등장하는 컴퓨터들을 
+
+
 
