Update 05 웹 정리 .md

--- a/1강/05 웹 정리 .md
+++ b/1강/05 웹 정리 .md
@@ -83,11 +83,11 @@ LAN을 연결하는 선을 LAN선이라고 부릅니다.
 
 웹에 접속할때 어떠한 일이 발생할까요?       
 
-![스크린샷 2023-01-28 오후 2 03 41](https://user-images.githubusercontent.com/48852104/215243116-cee756bd-3ffd-41fb-b4ef-b6c0d37b527f.png)
-
 우리의 스마트폰은 하나하나가 각각의 컴퓨터입니다.      
 만약 스마트폰으로 네이버에 접속하게 된다면 핸드폰 안에 있는 컴퓨터는 네이버가 켜놓은 컴퓨터에게 '웹페이지를 열 파일을 주세요'라는 신호를 보냅니다.     
 네이버의 컴퓨터는 그 신호를 받아서 우리들에게 파일을 전해줍니다.     
+
+![스크린샷 2023-01-28 오후 2 21 59](https://user-images.githubusercontent.com/48852104/215245015-a636c6dc-7e9b-477e-b0a7-378c8c820c99.png)
 
 수많은 요청들이 네이버의 컴퓨터로 가고 있지요.     
 그래서 네이버의 컴퓨터는 많은 요청을 언제나 받을 수 있게끔 지구 위 어딘가에 365일 24시간, 단 1초도 꺼지지 않는 컴퓨터를 항상 켜놓고 있습니다.     
@@ -99,10 +99,144 @@ LAN을 연결하는 선을 LAN선이라고 부릅니다.
 
 ![스크린샷 2023-01-28 오후 2 07 53](https://user-images.githubusercontent.com/48852104/215243242-b5fdf526-fa6c-46a1-9d3b-e156146e0eae.png)
 
-이제 
-이제 여기서 
-이제 여기서 등장하는 
-이제 여기서 등장하는 컴퓨터들을 
+이제 여기서 등장하는 컴퓨터들에 이름을 붙여보겠습니다.    
+
+파일을 달라고 계속 요청하는 컴퓨터를 '클라이언트'라고 합니다.    
+그리고 파일을 주는 컴퓨터를 '서버'라고 합니다.     
+
+> 음식점에 손님과 점원이 있는것처럼, 요청하는 '손님'과 서빙하는 '서버'가 있답니다.   
+
+![스크린샷 2023-01-28 오후 2 11 06](https://user-images.githubusercontent.com/48852104/215243339-8d8de2e3-aff0-41f7-a197-cac6eaa9a492.png)
+
+고객의 바로 앞에 있는 클라이언트 컴퓨터를 다른 말로 '프론트 엔드' 라고 표현합니다.    
+반면, 서버는 고객이 볼 수 없는 곳에 있기 때문에 '백 엔드'라고 부릅니다.     
+
+### 웹 코딩하기 
+
+웹에서 코딩을 하려면 어떻게 해야할까요?      
+
+컴퓨터에게 아래와 같이 일을 모두 정의해서 시켜주어야 합니다.     
+
+- 사용자가 들어왔어? 알림창을 띄워서 인사를 하자.
+- 사용자가 로그인을 하지 않은 상태면 로그인 화면으로 이동시키자.
+- 로그인을 했다면 메인 화면을 띄워주자.
+- 메인 화면은 A이고, 나머지는 탭으로 만들어서 클릭하면 화면을 바꿀수 있도록 하자.
+- 사용자가 B버튼을 눌렀다면 어떻게 하고, 메시지가 오면 어떻게 하고, .....
+
+![스크린샷 2023-01-28 오후 2 17 42](https://user-images.githubusercontent.com/48852104/215243596-6fac1c6b-abcf-46a5-ab2e-54f21e9c98c5.png)
+
+
+이 과정을 모두 프로그래밍 언어로 작성합니다.      
+
+
+각각의 요청은 다른 파일을 요청하겠지요?     
+서버에서는 그걸 받을 수 있는 창구를 각각 뚫어놓았습니다.     
+
+'무엇무엇 형식로 요청하면 무엇무엇을 줄게~' 하고 정의를 미리 해두었는데, 클라이언트는 정의된 형식대로 요청을 넣으면 응답을 받을 수 있습니다.     
+이렇게 미리 약속된 형식을 API(Application Programming Interface)라고 합니다.      
+
+> API 서버 개발자가 개발하고 클라이언트 개발자는 그 API를 사용합니다.     
+
+![스크린샷 2023-01-28 오후 2 40 52](https://user-images.githubusercontent.com/48852104/215248360-83c709b7-55c4-4ec6-9a70-5f647f3dbd61.png)
+
+서버가 클라이언트를 위해서 제공해야 할 API 들이 많아졌네요.       
+
+이 API에는 간단한 약속이 있습니다.      
+
+
+![스크린샷 2023-01-28 오후 2 44 53](https://user-images.githubusercontent.com/48852104/215248470-48e9fa71-675b-402f-a66f-2d97ab8de4dd.png)
+
+
+클라이언트는 서버에 요청을 보낼때 크게 4가지 요소로 나눌 수 있습니다.     
+CRUD라고 불리는 이 4가지 요청은 데이터를 다룰 때 기준이 됩니다.      
+
+- C : Create
+  - 게시글을 '추가하는' 기능
+  - 사진을 '올리는' 기능
+- R : Read
+  - 게시글을 '읽는' 기능
+  - 사진을 '불러오는' 기능
+- U : Update
+  - 게시글을 '수정하는' 기능
+  - 사진을 '바꾸는' 기능
+- D : Delete
+  - 게시글을 '삭제하는' 기능
+  - 사진을 '지우는' 기능
+
+
+
+![스크린샷 2023-01-28 오후 2 48 57](https://user-images.githubusercontent.com/48852104/215248602-65179c67-662b-4c0f-abac-1b9caf2d7e30.png)
+
+
+
+어려워 보일수 있지만 하나씩 작성하다 보면 어느새 뚝딱 만들어져 있는 모습을 볼 수 있을겁니다.     
+
+
+
+### 코딩하기
+
+가장 기본적인 웹 서버를 띄워보도록 합시다.     
+python으로 웹을 띄우기 위해서 flask 라는 프레임워크를 활용합니다.      
+
+> 프레임워크란 프로그램의 기초를 구축할 수 있는 코드의 집합입니다.
+> 프레임워크가 제공하는 여러 기능들을 사용해서 빠르고 효율적으로 프로그램을 구축할 수 있습니다.      
+> flask는 python언어로 web 을 만들기 위한 다양한 기능을 제공합니다.       
+
+#### 기본
+```python
+from flask import Flask
+
+app = Flask(__name__)
+
+@app.route('/')
+def index():
+    return 'Hello, WEB'
+
+app.run(debug=True)
+```
+
+
+#### html형식
+```python
+
+@app.route('/')
+def index():
+    return '<h2>Welcome</h2>Hello, WEB'
+
+```
+
+#### html파일
+
+```python
+
+@app.route('/')
+def index():
+    return 'index.html'
+
+```
+
+```html
+# index.html
+<!DOCTYPE html>  
+<html>  
+<body>
+
+  나의 첫 웹페이지
+
+</body>  
+</html>
+```
+
+
+
+
+
+
+
+
+
+
+
 
 
 
