Update 05 웹 정리 .md

--- a/1강/05 웹 정리 .md
+++ b/1강/05 웹 정리 .md
@@ -167,10 +167,29 @@ CRUD라고 불리는 이 4가지 요청은 데이터를 다룰 때 기준이 됩
 
 ![스크린샷 2023-01-28 오후 2 48 57](https://user-images.githubusercontent.com/48852104/215248602-65179c67-662b-4c0f-abac-1b9caf2d7e30.png)
 
+URL 로 구분을 하지 않고 요청을 보낼때 어떤 요청을 보냈는지 파악할 수 있는 스티커를 붙여서 함께 전송합니다.      
 
+- C : POST (생성해줘)
+- R : GET (불러와줘)
+- U : PUT (전체수정)/(일부수정)
+- D : DELETE (지워줘)
+
+스티커를 붙여 보내면 서버에서는 같은 URL 이어도 어떤 요청인지 구분할 수 있습니다.      
+
+서버에서는 클라이언트에서 요청을 보내면 다음과 같이 생각합니다.     
+- 요청을 보낸 사용자가 로그인한 사용자인가?
+- 비밀번호가 틀렸네. 다시 확인하라고 말해줘야겠다.
+- 친구중에 A를 찾아달라고? A 는 없다고 말해줘야겠군.
+- 친구 목록을 보내달라고? 가지고 있는 데이터 중에 로그인한 사용자가 가지고 있는 친구 목록을 보내줘야겠어.
+- 게시글 목록은 로그인이 없어도 보내줄 수 있지!
+
+컴퓨터가 생각한다는 것은 개발자가 이 모든 것을 코딩했다는 것을 의미합니다!     
+여기서 이런 코딩들은 서버 개발자가 합니다.    
+그리고 컴퓨터는 코딩된 대로 생각하고 응답을 보냅니다.   
 
 어려워 보일수 있지만 하나씩 작성하다 보면 어느새 뚝딱 만들어져 있는 모습을 볼 수 있을겁니다.     
 
+> 영어 단어 퀴즈를 하고 싶다고? 내가 가지고 있는 단어 리스트 중에 랜덤으로 하나를 뽑아서 주면 되겠어.    
 
 
 ### 코딩하기
