--- a/1강/02 기본구조.md
+++ b/1강/02 기본구조.md
@@ -63,5 +63,5 @@
 
 
 ### 결론 
-head 태그 안에는 문서에 대한 정보 또는 제목 표시를 하고, body 태그 안에 있는 내용부터 실질적으로 화면에 보여지는 부분이다.
+head 태그 안에는 문서에 대한 정보 또는 제목 표시를 하고, body 태그 안에 있는 내용부터 실질적으로 화면에 보여지는 부분입니다.
 
