--- a/1강/02 기본구조.md
+++ b/1강/02 기본구조.md
@@ -1,3 +1,51 @@
+# 기본 개념 이해하기
+### HTML (HyperText Markup Language)
+웹페이지의 구조를 정의하는 언어.
+제목, 본문, 이미지, 링크 등의 요소를 작성할 수 있음.
+예시:
+```html
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>My First Webpage</title>
+  </head>
+  <body>
+    <h1>Hello, World!</h1>
+    <p>This is my first webpage.</p>
+  </body>
+</html>
+```
+
+### CSS (Cascading Style Sheets)
+HTML 요소의 스타일을 정의하는 언어.
+색상, 글꼴, 레이아웃 등을 설정할 수 있음.
+예시:
+```css
+body {
+  background-color: lightblue;
+}
+h1 {
+  color: navy;
+  text-align: center;
+}
+p {
+  font-family: verdana;
+  font-size: 20px;
+}
+
+```
+
+### JavaScript
+웹페이지의 동작을 제어하는 언어.
+사용자와의 상호작용을 가능하게 함.
+예시:
+```javascript
+document.addEventListener("DOMContentLoaded", function() {
+  document.querySelector("h1").innerText = "Welcome to My Webpage!";
+});
+```
+
+
 # 메모장을 이용한 첫 웹페이지
 
 ```html
@@ -65,3 +113,47 @@
 ### 결론 
 head 태그 안에는 문서에 대한 정보 또는 제목 표시를 하고, body 태그 안에 있는 내용부터 실질적으로 화면에 보여지는 부분입니다.
 
+# 첫 웹페이지 만들기
+### HTML 파일
+파일 이름: index.html
+```html
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>My First Webpage</title>
+    <link rel="stylesheet" type="text/css" href="styles.css">
+  </head>
+  <body>
+    <h1>Hello, World!</h1>
+    <p>This is my first webpage.</p>
+    <script src="script.js"></script>
+  </body>
+</html>
+```
+
+### css 파일
+파일 이름: styles.css
+```css
+body {
+  background-color: lightblue;
+}
+h1 {
+  color: navy;
+  text-align: center;
+}
+p {
+  font-family: verdana;
+  font-size: 20px;
+}
+```
+
+### JavaScript 파일
+파일 이름: script.js
+```javascript
+document.addEventListener("DOMContentLoaded", function() {
+  document.querySelector("h1").innerText = "Welcome to My Webpage!";
+});
+```
+
+### 파일 실행
+index.html 파일을 브라우저로 열어보면 작성한 웹페이지가 표시됨.
