--- a/2강/03 영어단어장.md
+++ b/2강/03 영어단어장.md
@@ -181,3 +181,559 @@ python app.py
 - 단어 삭제 기능
 - 데이터베이스 연동 (SQLite 등)
 - 사용자 인증 및 권한 관리
+
+## 단어 추가, 삭제 기능
+단어 추가와 삭제 기능을 포함한 영어 단어장 애플리케이션을 만들기 위해 몇 가지 단계를 추가합니다.     
+이를 통해 사용자는 단어를 추가하고, 목록에서 단어를 삭제할 수 있게 됩니다.
+
+### 1단계: 애플리케이션 코드 수정
+app.py 파일을 수정해서 단어 삭제 기능을 추가하자.
+
+```python
+from flask import Flask, render_template, request, redirect, url_for
+
+app = Flask(__name__)
+
+# 단어장을 저장할 리스트
+vocab_list = []
+
+@app.route('/')
+def index():
+    return render_template('index.html', vocab_list=vocab_list)
+
+@app.route('/add', methods=['GET', 'POST'])
+def add_word():
+    if request.method == 'POST':
+        word = request.form['word']
+        meaning = request.form['meaning']
+        vocab_list.append({'word': word, 'meaning': meaning})
+        return redirect(url_for('index'))
+    return render_template('add_word.html')
+
+@app.route('/delete/<word>', methods=['POST'])
+def delete_word(word):
+    global vocab_list
+    vocab_list = [vocab for vocab in vocab_list if vocab['word'] != word]
+    return redirect(url_for('index'))
+
+if __name__ == '__main__':
+    app.run(debug=True)
+```
+
+### 2단계: HTML 템플릿 수정
+templates/index.html 파일을 수정해서 삭제 버튼을 추가합니다.
+
+```html
+<!DOCTYPE html>
+<html>
+<head>
+    <title>English Vocabulary</title>
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style.css') }}">
+</head>
+<body>
+    <h1>English Vocabulary</h1>
+    <a href="{{ url_for('add_word') }}">Add New Word</a>
+    <ul>
+        {% for vocab in vocab_list %}
+        <li>
+            {{ vocab.word }}: {{ vocab.meaning }}
+            <form method="post" action="{{ url_for('delete_word', word=vocab.word) }}" style="display:inline;">
+                <button type="submit" class="deleteButton">Delete</button>
+            </form>
+        </li>
+        {% endfor %}
+    </ul>
+</body>
+</html>
+```
+
+### 3단계: CSS 스타일 수정
+static/style.css 파일을 수정해서 삭제 버튼의 스타일을 추가합니다.
+
+```css
+body {
+    font-family: Arial, sans-serif;
+    background-color: #f4f4f4;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+h1 {
+    margin-top: 50px;
+}
+
+form {
+    margin-top: 20px;
+    display: flex;
+    flex-direction: column;
+}
+
+input {
+    margin: 5px 0;
+    padding: 10px;
+    width: 300px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+}
+
+button {
+    padding: 10px;
+    border: none;
+    background-color: #28a745;
+    color: white;
+    border-radius: 5px;
+    cursor: pointer;
+    width: 100px;
+}
+
+button:hover {
+    background-color: #218838;
+}
+
+ul {
+    list-style-type: none;
+    padding: 0;
+}
+
+li {
+    background: white;
+    margin: 5px 0;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    width: 400px;
+    text-align: left;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.deleteButton {
+    background-color: #dc3545;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    padding: 5px;
+}
+
+.deleteButton:hover {
+    background-color: #c82333;
+}
+```
+
+### 4단계: 애플리케이션 실행
+이제 애플리케이션을 다시 실행해봅시다.     
+터미널에서 app.py 파일이 있는 디렉토리로 이동한 후 다음 명령어를 실행합니다:
+
+```sh
+python app.py
+```
+
+브라우저에서 http://127.0.0.1:5000/로 접속하면 단어장 웹 애플리케이션이 실행되고, 단어를 추가하거나 삭제할 수 있습니다.    
+
+## 단어 퀴즈
+ "단어 퀴즈" 기능을 추가해봅시다.     
+ 이 기능은 랜덤으로 단어를 하나 선택하고, 사용자가 4개의 선택지 중에서 뜻을 맞추는 형태로 만듭니다.     
+
+### 1단계: 애플리케이션 코드 수정
+먼저 app.py 파일을 수정해서 퀴즈 기능을 추가합니다.
+
+app.py:
+
+```python
+from flask import Flask, render_template, request, redirect, url_for
+import random
+
+app = Flask(__name__)
+
+# 단어장을 저장할 리스트
+vocab_list = [
+    {'word': 'apple', 'meaning': 'a fruit'},
+    {'word': 'banana', 'meaning': 'another fruit'},
+    {'word': 'cherry', 'meaning': 'a small, round fruit'},
+    {'word': 'date', 'meaning': 'a sweet fruit from the date palm tree'},
+    {'word': 'elderberry', 'meaning': 'a small, dark berry'}
+]
+
+@app.route('/')
+def index():
+    return render_template('index.html', vocab_list=vocab_list)
+
+@app.route('/add', methods=['GET', 'POST'])
+def add_word():
+    if request.method == 'POST':
+        word = request.form['word']
+        meaning = request.form['meaning']
+        vocab_list.append({'word': word, 'meaning': meaning})
+        return redirect(url_for('index'))
+    return render_template('add_word.html')
+
+@app.route('/delete/<word>', methods=['POST'])
+def delete_word(word):
+    global vocab_list
+    vocab_list = [vocab for vocab in vocab_list if vocab['word'] != word]
+    return redirect(url_for('index'))
+
+@app.route('/quiz')
+def quiz():
+    if len(vocab_list) < 4:
+        return "Not enough words to create a quiz."
+    
+    correct_word = random.choice(vocab_list)
+    choices = random.sample(vocab_list, 4)
+    if correct_word not in choices:
+        choices[random.randint(0, 3)] = correct_word
+
+    return render_template('quiz.html', correct_word=correct_word, choices=choices)
+
+@app.route('/quiz/check', methods=['POST'])
+def check_answer():
+    selected_word = request.form['selected_word']
+    correct_word = request.form['correct_word']
+    correct_meaning = request.form['correct_meaning']
+
+    if selected_word == correct_word:
+        result = "Correct!"
+    else:
+        result = f"Incorrect! The correct meaning of {correct_word} is '{correct_meaning}'."
+
+    return render_template('result.html', result=result)
+
+if __name__ == '__main__':
+    app.run(debug=True)
+```
+
+### 2단계: 퀴즈 템플릿 작성
+templates/quiz.html 파일을 작성합니다.
+
+```html
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Word Quiz</title>
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style.css') }}">
+</head>
+<body>
+    <h1>Word Quiz</h1>
+    <p>Select the correct meaning for the word: <strong>{{ correct_word.word }}</strong></p>
+    <form method="post" action="{{ url_for('check_answer') }}">
+        {% for choice in choices %}
+        <div>
+            <input type="radio" id="{{ choice.word }}" name="selected_word" value="{{ choice.word }}" required>
+            <label for="{{ choice.word }}">{{ choice.meaning }}</label>
+        </div>
+        {% endfor %}
+        <input type="hidden" name="correct_word" value="{{ correct_word.word }}">
+        <input type="hidden" name="correct_meaning" value="{{ correct_word.meaning }}">
+        <button type="submit">Submit</button>
+    </form>
+    <br>
+    <a href="{{ url_for('index') }}">Back to Vocabulary List</a>
+</body>
+</html>
+```
+
+### 3단계: 결과 템플릿 작성
+templates/result.html 파일을 작성합니다.
+
+```html
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Quiz Result</title>
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style.css') }}">
+</head>
+<body>
+    <h1>Quiz Result</h1>
+    <p>{{ result }}</p>
+    <a href="{{ url_for('quiz') }}">Try Another Quiz</a>
+    <br>
+    <a href="{{ url_for('index') }}">Back to Vocabulary List</a>
+</body>
+</html>
+```
+
+### 4단계: CSS 스타일 수정 (필요한 경우)
+static/style.css 파일을 수정해서 퀴즈 페이지와 결과 페이지의 스타일을 추가합니다.
+
+```css
+body {
+    font-family: Arial, sans-serif;
+    background-color: #f4f4f4;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+h1 {
+    margin-top: 50px;
+}
+
+form {
+    margin-top: 20px;
+    display: flex;
+    flex-direction: column;
+}
+
+input[type="text"],
+input[type="radio"] {
+    margin: 5px 0;
+    padding: 10px;
+    width: 300px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+}
+
+button {
+    padding: 10px;
+    border: none;
+    background-color: #28a745;
+    color: white;
+    border-radius: 5px;
+    cursor: pointer;
+    width: 100px;
+}
+
+button:hover {
+    background-color: #218838;
+}
+
+ul {
+    list-style-type: none;
+    padding: 0;
+}
+
+li {
+    background: white;
+    margin: 5px 0;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    width: 400px;
+    text-align: left;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.deleteButton {
+    background-color: #dc3545;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    padding: 5px;
+}
+
+.deleteButton:hover {
+    background-color: #c82333;
+}
+```
+
+## 다음 버튼 추가
+'다음' 버튼을 추가하여 사용자가 퀴즈를 한 번 풀고 나서 계속해서 다음 문제를 풀 수 있도록 해봅시다.   
+
+### 1단계: 애플리케이션 코드 수정
+먼저 app.py 파일을 수정해서 '다음' 버튼을 추가하고, 사용자가 계속해서 퀴즈를 풀 수 있도록 합니다.
+
+app.py:
+
+```python
+from flask import Flask, render_template, request, redirect, url_for
+import random
+
+app = Flask(__name__)
+
+# 단어장을 저장할 리스트
+vocab_list = [
+    {'word': 'apple', 'meaning': 'a fruit'},
+    {'word': 'banana', 'meaning': 'another fruit'},
+    {'word': 'cherry', 'meaning': 'a small, round fruit'},
+    {'word': 'date', 'meaning': 'a sweet fruit from the date palm tree'},
+    {'word': 'elderberry', 'meaning': 'a small, dark berry'}
+]
+
+@app.route('/')
+def index():
+    return render_template('index.html', vocab_list=vocab_list)
+
+@app.route('/add', methods=['GET', 'POST'])
+def add_word():
+    if request.method == 'POST':
+        word = request.form['word']
+        meaning = request.form['meaning']
+        vocab_list.append({'word': word, 'meaning': meaning})
+        return redirect(url_for('index'))
+    return render_template('add_word.html')
+
+@app.route('/delete/<word>', methods=['POST'])
+def delete_word(word):
+    global vocab_list
+    vocab_list = [vocab for vocab in vocab_list if vocab['word'] != word]
+    return redirect(url_for('index'))
+
+@app.route('/quiz')
+def quiz():
+    if len(vocab_list) < 4:
+        return "Not enough words to create a quiz."
+    
+    correct_word = random.choice(vocab_list)
+    choices = random.sample(vocab_list, 4)
+    if correct_word not in choices:
+        choices[random.randint(0, 3)] = correct_word
+
+    return render_template('quiz.html', correct_word=correct_word, choices=choices)
+
+@app.route('/quiz/check', methods=['POST'])
+def check_answer():
+    selected_word = request.form['selected_word']
+    correct_word = request.form['correct_word']
+    correct_meaning = request.form['correct_meaning']
+
+    if selected_word == correct_word:
+        result = "Correct!"
+    else:
+        result = f"Incorrect! The correct meaning of {correct_word} is '{correct_meaning}'."
+
+    return render_template('result.html', result=result)
+
+if __name__ == '__main__':
+    app.run(debug=True)
+```
+
+### 2단계: 결과 템플릿 수정
+templates/result.html 파일을 수정해서 '다음' 버튼을 추가합니다.
+
+```html
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Quiz Result</title>
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style.css') }}">
+</head>
+<body>
+    <h1>Quiz Result</h1>
+    <p>{{ result }}</p>
+    <form action="{{ url_for('quiz') }}">
+        <button type="submit">Next</button>
+    </form>
+    <br>
+    <a href="{{ url_for('index') }}">Back to Vocabulary List</a>
+</body>
+</html>
+```
+
+### 3단계: 퀴즈 템플릿 수정
+templates/quiz.html 파일을 수정해서 퀴즈 풀이 후 결과를 체크하는 기능을 유지하면서 '다음' 퀴즈로 바로 넘어갈 수 있게 합니다.
+
+```html
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Word Quiz</title>
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style.css') }}">
+</head>
+<body>
+    <h1>Word Quiz</h1>
+    <p>Select the correct meaning for the word: <strong>{{ correct_word.word }}</strong></p>
+    <form method="post" action="{{ url_for('check_answer') }}">
+        {% for choice in choices %}
+        <div>
+            <input type="radio" id="{{ choice.word }}" name="selected_word" value="{{ choice.word }}" required>
+            <label for="{{ choice.word }}">{{ choice.meaning }}</label>
+        </div>
+        {% endfor %}
+        <input type="hidden" name="correct_word" value="{{ correct_word.word }}">
+        <input type="hidden" name="correct_meaning" value="{{ correct_word.meaning }}">
+        <button type="submit">Submit</button>
+    </form>
+    <br>
+    <a href="{{ url_for('index') }}">Back to Vocabulary List</a>
+</body>
+</html>
+```
+
+### 4단계: CSS 스타일 수정
+필요하다면 static/style.css 파일을 수정해서 스타일을 추가하자.
+
+```css
+body {
+    font-family: Arial, sans-serif;
+    background-color: #f4f4f4;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+h1 {
+    margin-top: 50px;
+}
+
+form {
+    margin-top: 20px;
+    display: flex;
+    flex-direction: column;
+}
+
+input[type="text"],
+input[type="radio"] {
+    margin: 5px 0;
+    padding: 10px;
+    width: 300px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+}
+
+button {
+    padding: 10px;
+    border: none;
+    background-color: #28a745;
+    color: white;
+    border-radius: 5px;
+    cursor: pointer;
+    width: 100px;
+}
+
+button:hover {
+    background-color: #218838;
+}
+
+ul {
+    list-style-type: none;
+    padding: 0;
+}
+
+li {
+    background: white;
+    margin: 5px 0;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    width: 400px;
+    text-align: left;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.deleteButton {
+    background-color: #dc3545;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    padding: 5px;
+}
+
+.deleteButton:hover {
+    background-color: #c82333;
+}
+```
