--- a/2강/03 영어단어장.md
+++ b/2강/03 영어단어장.md
@@ -352,11 +352,12 @@ app = Flask(__name__)
 
 # 단어장을 저장할 리스트
 vocab_list = [
-    {'word': 'apple', 'meaning': 'a fruit'},
-    {'word': 'banana', 'meaning': 'another fruit'},
-    {'word': 'cherry', 'meaning': 'a small, round fruit'},
-    {'word': 'date', 'meaning': 'a sweet fruit from the date palm tree'},
-    {'word': 'elderberry', 'meaning': 'a small, dark berry'}
+    {'word': 'apple', 'meaning': '사과'},
+    {'word': 'banana', 'meaning': '바나나'},
+    {'word': 'cherry', 'meaning': '체리'},
+    {'word': 'grapefruit', 'meaning': '자몽'},
+    {'word': 'peach', 'meaning': '복숭아'},
+    {'word': 'melon', 'meaning': '멜론'}
 ]
 
 @app.route('/')
@@ -552,11 +553,12 @@ app = Flask(__name__)
 
 # 단어장을 저장할 리스트
 vocab_list = [
-    {'word': 'apple', 'meaning': 'a fruit'},
-    {'word': 'banana', 'meaning': 'another fruit'},
-    {'word': 'cherry', 'meaning': 'a small, round fruit'},
-    {'word': 'date', 'meaning': 'a sweet fruit from the date palm tree'},
-    {'word': 'elderberry', 'meaning': 'a small, dark berry'}
+    {'word': 'apple', 'meaning': '사과'},
+    {'word': 'banana', 'meaning': '바나나'},
+    {'word': 'cherry', 'meaning': '체리'},
+    {'word': 'grapefruit', 'meaning': '자몽'},
+    {'word': 'peach', 'meaning': '복숭아'},
+    {'word': 'melon', 'meaning': '멜론'}
 ]
 
 @app.route('/')
