--- a/2강/03 영어단어장.md
+++ b/2강/03 영어단어장.md
@@ -653,7 +653,7 @@ templates/quiz.html 파일을 수정해서 퀴즈 풀이 후 결과를 체크하
         {% endfor %}
         <input type="hidden" name="correct_word" value="{{ correct_word.word }}">
         <input type="hidden" name="correct_meaning" value="{{ correct_word.meaning }}">
-        <button type="submit">Submit</button>
+        <button type="submit" class="submitButton">Submit</button>
     </form>
     <br>
     <a href="{{ url_for('index') }}">Back to Vocabulary List</a>
@@ -737,5 +737,10 @@ li {
 
 .deleteButton:hover {
     background-color: #c82333;
+}
+
+.submitButton {
+    margin: 0 auto;
+    margin-top: 20px;
 }
 ```
