--- a/3강/01 도서관.md
+++ b/3강/01 도서관.md
@@ -71,31 +71,31 @@ if __name__ == '__main__':
 책 추가 (POST):
 
 ```sh
-curl -X POST -H "Content-Type: application/json" -d '{"title": "1984", "author": "George Orwell"}' http://127.0.0.1:5000/books
+curl -X POST -H "Content-Type: application/json" -d '{"title": "1984", "author": "George Orwell"}' http://127.0.0.1:5000/api/books
 ```
 
 책 목록 조회 (GET):
 
 ```sh
-curl http://127.0.0.1:5000/books
+curl http://127.0.0.1:5000/api/books
 ```
 
 특정 책 조회 (GET):
 
 ```sh
-curl http://127.0.0.1:5000/books/1984
+curl http://127.0.0.1:5000/api/books/1984
 ```
 
 책 정보 수정 (PUT):
 
 ```sh
-curl -X PUT -H "Content-Type: application/json" -d '{"author": "Orwell"}' http://127.0.0.1:5000/books/1984
+curl -X PUT -H "Content-Type: application/json" -d '{"author": "Orwell"}' http://127.0.0.1:5000/api/books/1984
 ```
 
 책 삭제 (DELETE):
 
 ```sh
-curl -X DELETE http://127.0.0.1:5000/books/1984
+curl -X DELETE http://127.0.0.1:5000/api/books/1984
 ```
 
 ### 4단계: JSON 형식의 데이터 관리
