--- a/3강/01 도서관.md
+++ b/3강/01 도서관.md
@@ -352,6 +352,62 @@ function deleteBook(title) {
 ```
 
 ## 알아보기
+RESTful API란 무엇인가?
+**REST (Representational State Transfer)**는 웹 서비스 설계 아키텍처 스타일이자 설계 원칙입니다.      
+RESTful API는 이러한 REST 원칙을 따르는 API(Application Programming Interface)를 의미합니다.      
+RESTful API는 자원을 표현하고 조작하기 위해 HTTP 프로토콜을 사용합니다.
+
+REST 원칙
+- 클라이언트-서버 구조: 클라이언트와 서버는 서로 독립적으로 동작하며, 클라이언트는 사용자 인터페이스와 관련된 작업을 담당하고, 서버는 데이터 저장 및 처리를 담당.
+- 무상태성 (Stateless): 서버는 각 요청을 독립적으로 처리하며, 이전 요청에 대한 정보를 저장하지 않아. 모든 필요한 상태는 클라이언트가 요청에 포함해서 보냄.
+- 캐시 가능: 응답 데이터는 캐시 가능해야 하며, 클라이언트는 이를 통해 서버의 부하를 줄일 수 있음.
+- 계층화 시스템: 클라이언트는 직접 서버와 통신하는지, 중간 레이어(프록시, 게이트웨이 등)를 통해 통신하는지 알 수 없어야 함.
+- 인터페이스 일관성: API는 일관된 인터페이스를 제공해야 하며, 이를 통해 클라이언트와 서버가 서로 독립적으로 발전할 수 있음.
+- Code on Demand (선택 사항): 서버는 클라이언트가 실행할 수 있는 코드를 전송할 수 있어야 함(JavaScript 같은).
+
+### HTTP 메서드
+RESTful API는 주로 다음과 같은 HTTP 메서드를 사용하여 자원을 조작합니다.
+
+```
+GET: 자원의 표현을 요청. 주로 데이터를 조회할 때 사용.
+POST: 새로운 자원을 생성. 클라이언트가 서버에 데이터를 전송할 때 사용.
+PUT: 기존 자원을 업데이트. 전체 자원을 교체할 때 사용.
+PATCH: 기존 자원의 일부를 업데이트.
+DELETE: 자원을 삭제.
+OPTIONS: 지원되는 HTTP 메서드를 요청.
+```
+
+URI 설계
+- RESTful API는 자원(Resource)을 URI(Uniform Resource Identifier)로 식별합니다.
+- 자원은 명사로 표현되며, HTTP 메서드를 사용하여 해당 자원을 조작해.
+
+예를 들어, 책을 관리하는 API를 설계한다고 가정해봅니다.
+
+```
+GET /books: 모든 책을 조회.
+GET /books/{id}: 특정 ID를 가진 책을 조회.
+POST /books: 새로운 책을 생성.
+PUT /books/{id}: 특정 ID를 가진 책을 업데이트.
+PATCH /books/{id}: 특정 ID를 가진 책의 일부를 업데이트.
+DELETE /books/{id}: 특정 ID를 가진 책을 삭제.
+```
+
+### HTTP 상태 코드
+HTTP 상태 코드는 클라이언트가 서버에 요청을 보냈을 때, 서버가 응답하는 데 사용되는 숫자 코드입니다.    
+이 코드는 요청이 성공적으로 처리되었는지, 오류가 발생했는지 등을 나타냅니다.
+
+[주요 HTTP 상태 코드](https://developer.mozilla.org/ko/docs/Web/HTTP/Status)
+
+```
+200 OK: 요청이 성공적으로 처리됨.
+201 Created: 요청이 성공적으로 처리되었고, 자원이 생성됨.
+204 No Content: 요청이 성공적으로 처리되었으나, 응답 본문이 없음.
+400 Bad Request: 잘못된 요청. 클라이언트의 요청이 잘못됨.
+401 Unauthorized: 인증이 필요함. 클라이언트가 인증되지 않음.
+403 Forbidden: 접근 금지. 클라이언트에게 자원에 대한 접근 권한이 없음.
+404 Not Found: 자원을 찾을 수 없음. 요청한 자원이 없음.
+500 Internal Server Error: 서버 오류. 서버에서 요청을 처리하는 중 오류가 발생함.
+```
 
 ### curl이란 무엇인가?
 curl은 명령줄 도구로, URL을 통해 데이터를 전송하는 데 사용합니다.     
@@ -372,22 +428,6 @@ curl -X PUT -H "Content-Type: application/json" -d '{"key":"new_value"}' http://
 
 # DELETE 요청: URL에서 데이터를 삭제함.
 curl -X DELETE http://example.com/api/resource
-```
-
-### HTTP 상태 코드
-HTTP 상태 코드는 클라이언트가 서버에 요청을 보냈을 때, 서버가 응답하는 데 사용되는 숫자 코드입니다.    
-이 코드는 요청이 성공적으로 처리되었는지, 오류가 발생했는지 등을 나타냅니다.
-
-[주요 HTTP 상태 코드](https://developer.mozilla.org/ko/docs/Web/HTTP/Status)
-
-```
-200 OK: 요청이 성공적으로 처리되었음
-201 Created: 요청이 성공적으로 처리되었고, 자원이 생성되었음
-400 Bad Request: 클라이언트의 요청이 잘못되었음
-401 Unauthorized: 인증이 필요함
-403 Forbidden: 요청이 금지되었음
-404 Not Found: 요청한 자원을 찾을 수 없음
-500 Internal Server Error: 서버에 오류가 발생했음
 ```
 
 예제: curl을 사용한 HTTP 요청
