--- a/3강/01 도서관.md
+++ b/3강/01 도서관.md
@@ -58,8 +58,8 @@ class Book(Resource):
         books = [item for item in books if item['title'] != title]
         return {'message': 'Book deleted'}, 200
 
-api.add_resource(BookList, '/books')
-api.add_resource(Book, '/books/<string:title>')
+api.add_resource(BookList, '/api/books')
+api.add_resource(Book, '/api/books/<string:title>')
 
 if __name__ == '__main__':
     app.run(debug=True)
