--- a/3강/01 도서관.md
+++ b/3강/01 도서관.md
@@ -260,6 +260,7 @@ h1 {
     color: white;
     border-radius: 5px;
     cursor: pointer;
+    margin: 5px;
 }
 
 #book-form button:hover {
@@ -289,6 +290,7 @@ h1 {
     color: white;
     border-radius: 5px;
     cursor: pointer;
+    margin-left: 5px;
 }
 
 .book-item button:hover {
