--- a/3강/02 퀴즈.md
+++ b/3강/02 퀴즈.md
@@ -446,3 +446,25 @@ python app.py
 또한, 관리자 패널을 통해 퀴즈 질문을 추가, 수정, 삭제할 수 있습니다.
 
 이제 좀 더 복잡한 퀴즈 게임 웹 애플리케이션이 완성되었습니다.
+
+### 참고사항
+```
+curl -X GET http://127.0.0.1:5000/api/quizzes
+
+curl -X GET http://127.0.0.1:5000/api/quizzes/1
+
+curl -X POST -H "Content-Type: application/json" -d '{
+  "question": "What is the capital of Germany?",
+  "choices": ["Berlin", "Paris", "London", "Madrid"],
+  "answer": "Berlin"
+}' http://127.0.0.1:5000/api/quizzes
+
+curl -X PUT -H "Content-Type: application/json" -d '{
+  "question": "What is the capital of Germany?",
+  "choices": ["Berlin", "Paris", "London", "Rome"],
+  "answer": "Berlin"
+}' http://127.0.0.1:5000/api/quizzes/1
+
+curl -X DELETE http://127.0.0.1:5000/api/quizzes/1
+
+```
