--- a/3강/02 퀴즈.md
+++ b/3강/02 퀴즈.md
@@ -459,6 +459,19 @@ python app.py
 
 ### 참고사항
 ```
+# 선택지 랜덤
+@app.route('/question')
+def question():
+    if session['question_index'] >= len(questions):
+        return redirect(url_for('result'))
+
+    question_data = questions[session['question_index']]
+    choices = question_data['choices'][:]
+    random.shuffle(choices)
+    return render_template('quiz.html', question=question_data['question'], choices=choices)
+```
+
+```
 curl -X GET http://127.0.0.1:5000/api/quizzes
 
 curl -X GET http://127.0.0.1:5000/api/quizzes/1
@@ -478,3 +491,83 @@ curl -X PUT -H "Content-Type: application/json" -d '{
 curl -X DELETE http://127.0.0.1:5000/api/quizzes/1
 
 ```
+
+### 세션
+**session**은 웹 애플리케이션에서 사용자의 상태 정보를 유지하기 위해 사용되는 저장소입니다.    
+세션을 사용하면 사용자가 웹 사이트를 탐색하는 동안 정보를 유지할 수 있습니다.    
+
+#### 세션의 용도
+- 사용자 인증 상태 유지
+  - 사용자가 웹 사이트에 로그인하면, 세션을 사용하여 로그인 상태를 유지할 수 있습니다.
+  - 이렇게 하면 사용자가 다른 페이지로 이동할 때마다 로그인 상태를 확인할 필요가 없습니다.
+
+- 사용자 데이터 저장:
+  - 사용자의 선택 사항이나 입력 데이터를 세션에 저장할 수 있습니다.
+  - 예를 들어, 쇼핑 카트의 항목이나 설문조사의 답변을 세션에 저장할 수 있습니다.
+
+- 상태 정보 유지:
+  - 사용자가 웹 사이트를 탐색하는 동안 상태 정보를 유지할 수 있습니다.
+  - 예를 들어, 퀴즈 애플리케이션에서 사용자의 현재 점수와 진행 상태를 세션에 저장할 수 있습니다.
+ 
+#### 세션의 장점
+- 서버 측 저장:
+  - 세션 데이터는 서버 측에 저장되므로, 클라이언트가 데이터를 직접 수정할 수 없습니다.
+  - 이는 보안성을 높이는 데 도움이 됩니다.
+ 
+- 편리한 상태 관리:
+  - 세션을 사용하면 사용자의 상태 정보를 쉽게 관리할 수 있습니다.
+  - 여러 페이지에서 공유되는 데이터를 세션에 저장하고 사용할 수 있습니다.
+
+- 자동 만료:
+  - 세션에는 유효 기간이 설정될 수 있어, 일정 시간이 지나면 자동으로 만료됩니다.
+  - 이를 통해 사용자의 상태 정보를 일정 시간 후에 자동으로 정리할 수 있습니다.
+
+#### 예제
+```
+from flask import Flask, session, redirect, url_for, request
+
+app = Flask(__name__)
+app.secret_key = 'supersecretkey'  # 세션 암호화를 위한 비밀 키
+
+@app.route('/')
+def index():
+    if 'username' in session:
+        return f'Logged in as {session["username"]}'
+    return 'You are not logged in'
+
+@app.route('/login', methods=['GET', 'POST'])
+def login():
+    if request.method == 'POST':
+        session['username'] = request.form['username']
+        return redirect(url_for('index'))
+    return '''
+        <form method="post">
+            <p><input type=text name=username>
+            <p><input type=submit value=Login>
+        </form>
+    '''
+
+@app.route('/logout')
+def logout():
+    session.pop('username', None)
+    return redirect(url_for('index'))
+
+if __name__ == '__main__':
+    app.run(debug=True)
+```
+
+- app.secret_key:
+  - 세션 데이터를 암호화하기 위해 사용되는 비밀 키입니다.
+  - 이를 설정하지 않으면 세션을 사용할 수 없습니다.
+
+- session:
+  - Flask에서 제공하는 전역 객체로, 세션 데이터를 저장하고 관리하는 데 사용됩니다. 딕셔너리처럼 키-값 쌍으로 데이터를 저장할 수 있습니다.
+ 
+- 로그인 상태 유지:
+  - 사용자가 로그인하면 session['username']에 사용자 이름을 저장합니다.
+  - 로그아웃 시 session.pop('username', None)을 사용하여 세션에서 사용자 이름을 제거합니다.
+
+- 상태 확인:
+  - 메인 페이지에서 if 'username' in session을 사용하여 사용자가 로그인되어 있는지 확인하고, 로그인 상태에 따라 다른 메시지를 표시합니다.
+
+세션은 사용자의 상태를 유지하고, 여러 페이지에서 공유되는 데이터를 관리하는 데 매우 유용합니다.
