--- a/3강/02 퀴즈.md
+++ b/3강/02 퀴즈.md
@@ -571,3 +571,24 @@ if __name__ == '__main__':
   - 메인 페이지에서 if 'username' in session을 사용하여 사용자가 로그인되어 있는지 확인하고, 로그인 상태에 따라 다른 메시지를 표시합니다.
 
 세션은 사용자의 상태를 유지하고, 여러 페이지에서 공유되는 데이터를 관리하는 데 매우 유용합니다.
+
+### 랜덤 적용
+랜덤하게 선택지가 내려가도록 수정해봅시다.
+
+```
+import random
+
+... 생략 ...
+
+@app.route('/question')
+def question():
+    if session['question_index'] >= len(questions):
+        return redirect(url_for('result'))
+
+    question_data = questions[session['question_index']]
+    choices = question_data['choices'][:]
+    random.shuffle(choices)
+    return render_template('quiz.html', question=question_data['question'], choices=choices)
+
+... 생략 ...
+```
