--- a/5강/01 인공지능.md
+++ b/5강/01 인공지능.md
@@ -15,6 +15,8 @@
 - 머신러닝은 인공지능의 하위 분야로, 데이터를 이용해 학습하고 예측하는 알고리즘을 개발하는 것을 말합니다.
 - 딥러닝은 머신러닝의 하위 분야로, 특히 인공신경망을 사용하여 데이터의 복잡한 패턴을 학습하는 방법론입니다.
 
+![image](https://github.com/user-attachments/assets/39cb06bd-f5ac-43b9-a999-1b2ab65bb4e7)
+
 #### 요약
 - 인공지능(AI): 인간의 지능을 모방하는 컴퓨터 시스템
 - 머신러닝(ML): 데이터를 통해 학습하는 알고리즘 개발
