--- a/5강/01 인공지능.md
+++ b/5강/01 인공지능.md
@@ -17,6 +17,10 @@
 
 ![image](https://github.com/user-attachments/assets/39cb06bd-f5ac-43b9-a999-1b2ab65bb4e7)
 
+전통적인 머신러닝 기법은 주로 정형 데이터를 다룹니다. 관계형 데이터베이스(Relational Database)나 엑셀 표로 정리되는 테이블 데이터를 생각하시면 되겠습니다. 의사결정에 필요한 데이터를 사람이 정리해 기계에 알려주면 기계는 이 정보를 토대로 판단이나 예측을 하는 경우입니다.
+
+반면 딥러닝은 주로 비정형 데이터를 다룹니다. 비정형 데이터란 지정된 방식으로 정리되지 않은 정보를 말합니다. 간단히 말하자면 이미지, 비디오, 텍스트 문장이나 문서, 음성 데이터 등을 말합니다.
+
 #### 요약
 - 인공지능(AI): 인간의 지능을 모방하는 컴퓨터 시스템
 - 머신러닝(ML): 데이터를 통해 학습하는 알고리즘 개발
