--- a/5강/01 인공지능.md
+++ b/5강/01 인공지능.md
@@ -6,6 +6,17 @@
 2. 머신러닝(ML, Machine Learning)의 정의
 - 머신러닝은 인공지능의 한 분야로, 명시적으로 프로그래밍하지 않고도 데이터로부터 학습하고 예측할 수 있는 알고리즘을 개발하는 것입니다. 머신러닝 모델은 데이터를 기반으로 패턴을 인식하고, 이를 통해 새로운 데이터를 예측하거나 분류하는 데 사용됩니다. 머신러닝의 주요 유형에는 지도 학습(Supervised Learning), 비지도 학습(Unsupervised Learning), 강화 학습(Reinforcement Learning)이 있습니다.
 
+2.1. 머신러닝의 주요 유형
+- 지도 학습(Supervised Learning)
+  - 정의: 정답(레이블)이 있는 데이터를 학습하여 새로운 데이터를 예측하는 방식입니다.
+  - 예시: 개와 고양이 사진을 구분하는 문제에서, 각각의 사진에 '개' 또는 '고양이'라는 레이블이 붙어 있습니다. 모델은 이러한 데이터를 학습하여 새로운 사진이 주어졌을 때 개 또는 고양이인지 예측합니다.
+- 비지도 학습(Unsupervised Learning)
+  - 정의: 정답(레이블)이 없는 데이터를 학습하여 데이터 간의 유사성을 찾는 방식입니다.
+  - 예시: 라벨이 없는 대량의 사진 데이터를 비슷한 특징끼리 군집화(클러스터링)하는 작업이 포함됩니다. 예를 들어, 영화 추천 시스템에서 비슷한 영화끼리 묶어 추천할 수 있습니다.
+- 강화 학습(Reinforcement Learning)
+  - 정의: 에이전트가 환경과 상호작용하며 보상을 최대화하기 위해 행동을 학습하는 방식입니다.
+  - 예시: 벽돌 깨기 게임에서 컴퓨터가 막대를 조작하여 공을 떨어뜨리지 않고 벽돌을 깨는 방법을 학습합니다. 에이전트는 벽돌을 깰 때 보상을 받고, 공을 잃을 때 벌점을 받으며, 이를 통해 최적의 행동 전략을 학습합니다.
+
 3. 딥러닝(Deep Learning)의 정의
 - 딥러닝은 머신러닝의 하위 분야로, 인공신경망(Artificial Neural Networks)을 사용하여 데이터를 분석하고 처리하는 기술입니다. 딥러닝은 여러 층의 신경망(Neural Networks)을 사용하여 입력 데이터의 복잡한 패턴을 학습합니다. 이 층들이 깊어질수록 더 복잡한 특징을 학습할 수 있어, 이미지 인식, 음성 인식, 자연어 처리 등에서 뛰어난 성능을 보입니다.
 
